--- a/preamble.tex
+++ b/preamble.tex
@@ -88,7 +88,7 @@
 \newcommand*{\token}[1]{\text{{\small \texttt{#1}}}}
 \renewcommand*{\H}{\mathbb{H}}
 \newcommand*{\N}{\mathbb{N}}
-\newcommand*{\Y}{\mathbb{Y}}
+\newcommand*{\blob}{\mathbb{Y}}
 \newcommand*{\Z}{\mathbb{Z}}
 \newcommand*{\G}{\mathbb{G}}
 \newcommand*{\orderedin}{\ensuremath{\mathrel{\mathrlap{<}{\scalebox{0.95}[1]{$-$}}}}}
@@ -147,8 +147,9 @@
 \newcommand*{\transpose}{{}^\text{T}}
 \newcommand*{\joined}{\wideparen}
 \newcommand*{\ang}[1]{\langle#1\rangle}
-\renewcommand*{\hash}{\mathcal{H}}
+\renewcommand*{\blake}{\mathcal{H}}
 \newcommand*{\sub}[1]{_{#1}}
+\newcommand*{\subb}[1]{[#1]}
 
 % GP terms
 \newcommand*{\goodset}{\psi_\mathbf{g}}
@@ -265,11 +266,17 @@
 
 % MISC - These need tidying.
 \newcommand*{\vk¬ed}{e}
+\newcommand*{\header}{\mathbf{H}}
+\newcommand*{\h¬timeslot}{\header_t}
+
+\newcommand*{\histlookup}{\Lambda}
+
 
 \newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\defxfer}{\mathbb{T}}
 \newcommand*{\defxfers}{\seq{\defxfer}}
 
+\newcommand*{\thestate}{\sigma}
 \newcommand*{\privileges}{\chi}
 \newcommand*{\manager}{\privileges_m}
 \newcommand*{\delegator}{\privileges_v}
@@ -282,10 +289,11 @@
 \newcommand*{\recenthistory}{\beta_H}
 \newcommand*{\beefybelt}{\beta_B}
 
-\newcommand*{\accountspre}{\delta}
-\newcommand*{\accountspostacc}{\delta^\dagger}
-\newcommand*{\accountspostxfer}{\delta^\ddagger}
-\newcommand*{\accountspostpreimage}{\delta'}
+\newcommand*{\accounts}{\delta}
+\newcommand*{\accountspre}{\accounts}
+\newcommand*{\accountspostacc}{\accounts^\dagger}
+\newcommand*{\accountspostxfer}{\accounts^\ddagger}
+\newcommand*{\accountspostpreimage}{\accounts'}
 
 % PVM stuff
 \newcommand*{\gascounter}{\varrho}
