--- a/text/beefy.tex
+++ b/text/beefy.tex
@@ -4,6 +4,6 @@ For each finalized block $\mathbf{B}$ which a validator imports, said validator 
 
 Formally, let $\mathbf{F}_v$ be the signed commitment of validator index $v$ which will be published:
 \begin{align}\label{eq:beefysignedcommitment}
-  \mathbf{F}_v &\equiv \mathcal{S}_{\kappa'_v}(\mathsf{X}_B\concat\hash_K(\se_M(\text{last}(\recenthistory)_\mathbf{b}]))\\
+  \mathbf{F}_v &\equiv \mathcal{S}_{\kappa'_v}(\mathsf{X}_B\concat\blake_K(\se_M(\text{last}(\recenthistory)_\mathbf{b}]))\\
   \mathsf{X}_B &= \token{\$jam\_beefy}
 \end{align}
