--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -31,21 +31,21 @@
   \begin{description}
     \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $K$ to range $V$. See section \ref{sec:dictionaries}.
   \end{description}
-  \item[$\mathbb{E}$] The set of valid Ed25519 signatures. A subset of $\Y_{64}$. See section \ref{sec:cryptography}.
+  \item[$\mathbb{E}$] The set of valid Ed25519 signatures. A subset of $\blob_{64}$. See section \ref{sec:cryptography}.
   \begin{description}
     \item[$\sig{K}{M}$] The set of valid Ed25519 signatures of the key $K$ and message $M$. A subset of $\mathbb{E}$. See section \ref{sec:cryptography}.
   \end{description}
-  \item[$\mathbb{F}$] The set of Bandersnatch signatures. A subset of $\Y_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
+  \item[$\mathbb{F}$] The set of Bandersnatch signatures. A subset of $\blob_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
   \begin{description}
     \item[$\bandersig{K}{C}{M}$] The set of Bandersnatch signatures of the public key $K$, context $C$ and message $M$. A subset of $\mathbb{F}$. See section \ref{sec:cryptography}.
     \item[$\bar{\mathbb{F}}$] The set of Bandersnatch Ring\textsc{vrf} proofs. See section \ref{sec:cryptography}.
     \item[$\bandersnatch{R}{C}{M}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $R$, context $C$ and message $M$. A subset of $\bar{\mathbb{F}}$. See section \ref{sec:cryptography}.
   \end{description}
   \item[$\mathbb{G}$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
-  \item[$\H$] The set of 32-octet cryptographic values. A subset of $\Y_{32}$. $\H$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
+  \item[$\H$] The set of 32-octet cryptographic values. A subset of $\blob_{32}$. $\H$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
-    \item[$\H_B$] The set of Bandersnatch public keys. A subset of $\Y_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
-    \item[$\H_E$] The set of Ed25519 public keys. A subset of $\Y_{32}$. See section \ref{sec:signing}.
+    \item[$\H_B$] The set of Bandersnatch public keys. A subset of $\blob_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\H_E$] The set of Ed25519 public keys. A subset of $\blob_{32}$. See section \ref{sec:signing}.
   \end{description}
   \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\mathbb{J}$] The set of work execution errors.
@@ -60,10 +60,10 @@
   \item[$\mathbb{V}^*_{\memory}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\workreport$] The set of work-reports.
   \item[$\mathbb{X}$] The set of refinement contexts.
-  \item[$\Y$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
+  \item[$\blob$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
   \begin{description}
-    \item[$\Y_{BLS}$] The set of BLS public keys. A subset of $\Y_{144}$. See section \ref{sec:signing}.
-    \item[$\Y_R$] The set of Bandersnatch ring roots. A subset of $\Y_{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
+    \item[$\blob_{BLS}$] The set of BLS public keys. A subset of $\blob_{144}$. See section \ref{sec:signing}.
+    \item[$\blob_R$] The set of Bandersnatch ring roots. A subset of $\blob_{144}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
 \end{description}
 
@@ -79,7 +79,7 @@
   \end{description}
 %  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
-  \item[$\Lambda$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
+  \item[$\histlookup$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
   \item[$\Xi$] The work-digest computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
   \item[$\Upsilon$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
@@ -136,8 +136,8 @@
 %  \item[$\mathcal{D}$] Unused.
   \item[$\se(\dots)$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
   \item[$\mathcal{F}(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
-  \item[$\hash(\dots)$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
-  \item[$\hash_K(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
+  \item[$\blake(\dots)$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
+  \item[$\blake_K(\dots)$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
   %  \item[$\mathcal{G}$] Unused.
   %  \item[$\mathcal{I}$] Unused.
   \item[$\mathcal{J}_x$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
@@ -145,7 +145,7 @@
   \item[$\mathcal{L}_x$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
   \item[$\mathcal{M}(\dots)$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\mathcal{M}_B(\dots)$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
-  \item[$\mathcal{M}_\sigma(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
+  \item[$\mathcal{M}_\thestate(\dots)$] The state Merklization function. See appendix \ref{sec:statemerklization}.
   \item[$\mathcal{N}(\dots)$] The erasure-coding chunks function. See appendix \ref{sec:erasurecoding}.
   \item[$\mathcal{O}(\dots)$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\mathcal{P}_n(\dots)$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
@@ -222,7 +222,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
     \item[$\rho^\dagger$] The post-judgment, pre-guarantees-extrinsic intermediate state. %	δ
     \item[$\rho^\ddagger$] The post-guarantees-extrinsic, pre-assurances-extrinsic, intermediate state. %	δ
   \end{description}
-  \item[$\sigma$] The $\sigma$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
+  \item[$\thestate$] The $\thestate$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
   \item[$\tau$] The most recent block's $\tau$imeslot. %	τ
   \item[$\varphi$] The authorization queue. %	ϕ
   \item[$\psi$] Past judgments on work-reports and validators. %	ψ
