--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -42,7 +42,7 @@ Work-packages have two other types of external data associated with them: A cryp
 
 The ability to communicate large amounts of data from one work-package to some subsequent work-package is a key feature of the \Jam availability system. An export segment, defined as the set $\G$, is an octet sequence of fixed length $\mathsf{W}_G = 4104$. It is the smallest datum which may individually be imported from---or exported to---the long-term D$^3$L during the Refine function of a work-package. Being an exact multiple of the erasure-coding piece size ensures that the data segments of work-package can be efficiently placed in the D$^3$L system.
 \begin{equation}\label{eq:segment}
-  \G \equiv \Y_{\mathsf{W}_G}
+  \G \equiv \blob_{\mathsf{W}_G}
 \end{equation}
 
 Exported segments are data which are \emph{generated} through the execution of the Refine logic and thus are a side effect of transforming the work-package into a work-report. Since their data is deterministic based on the execution of the Refine logic, we do not require any particular commitment to them in the work-package beyond knowing how many are associated with each Refine invocation in order that we can supply an exact index.
@@ -64,10 +64,10 @@ The guarantor is able to use this proof to justify to themselves that they are n
 We begin by defining a \emph{work-package}, of set $\workpackage$, and its constituent \emph{work-item}s, of set $\workitem$. A work-package includes a simple blob acting as an authorization token $\wp¬authtoken$, the index of the service which hosts the authorization code $\wp¬authcodehost$, an authorization code hash $\wp¬authcodehash$ and a configuration blob $\wp¬authconfig$, a context $\wp¬context$ and a sequence of work items $\wp¬workitems$:
 \begin{equation}\label{eq:workpackage}
   \workpackage \equiv \tuple{
-    \isa{\wp¬authtoken}{\Y},\ 
+    \isa{\wp¬authtoken}{\blob},\ 
     \isa{\wp¬authcodehost}{\N_S},\ 
     \isa{\wp¬authcodehash}{\H},\ 
-    \isa{\wp¬authconfig}{\Y},\ 
+    \isa{\wp¬authconfig}{\blob},\ 
     \isa{\wp¬context}{\mathbb{X}},\ 
     \isa{\wp¬workitems}{\seq{\workitem}_{1:\mathsf{I}}}
   }
@@ -78,7 +78,7 @@ A work item includes: $\wi¬service$ the identifier of the service to which it r
   \workitem \equiv \tuple{\begin{aligned}
     &\isa{\wi¬service}{\N_S},
     \isa{\wi¬codehash}{\H},
-    \isa{\wi¬payload}{\Y},
+    \isa{\wi¬payload}{\blob},
     \isa{\wi¬refgaslimit}{\N_G},
     \isa{\wi¬accgaslimit}{\N_G},
     \isa{\wi¬exportcount}{\N}, \\
@@ -126,7 +126,7 @@ We limit the sums of each of the two gas limits to be at most the maximum gas al
 Given the result $\wl¬result$ and gas used $\wl¬gasused$ of some work-item, we define the item-to-digest function $\itemtodigest$ as:
 \begin{equation}
   \itemtodigest\colon\left\{\begin{aligned}
-    (\workitem, \Y \cup \mathbb{J}, \N_G) &\to \mathbb{L}\\
+    (\workitem, \blob \cup \mathbb{J}, \N_G) &\to \mathbb{L}\\
     \tup{\tup{\begin{aligned}
       &\¬service, \¬codehash, \¬payload,\\
       &\wi¬accgaslimit, \¬exportcount, \wi¬importsegments, \wi¬extrinsics
@@ -134,7 +134,7 @@ Given the result $\wl¬result$ and gas used $\wl¬gasused$ of some work-item, we
     }, \wl¬result, \wl¬gasused} &\mapsto \tup{\begin{aligned}
       &\wl¬service,\,
       \wl¬codehash,\,
-      \is{\wl¬payloadhash}{\hash(\¬payload)},\,
+      \is{\wl¬payloadhash}{\blake(\¬payload)},\,
       \is{\wl¬gaslimit}{\wi¬accgaslimit},\,
       \wl¬result,\,
       \wl¬gasused,\\
@@ -149,13 +149,13 @@ Given the result $\wl¬result$ and gas used $\wl¬gasused$ of some work-item, we
 We define the work-package's implied authorizer as $\wpX_\wp¬authorizer$, the hash of the authorization code hash concatenated with the configuration. We define the authorization code as $\wpX_\wp¬authcode$ and require that it be available at the time of the lookup anchor block from the historical lookup of service $\wpX_\wp¬authcodehost$. Formally:
 \begin{equation}
   \forall \wpX \in \workpackage: \left\{\,\begin{aligned}
-    \wpX_\wp¬authorizer &\equiv \hash(\wpX_\wp¬authcodehash \concat \wpX_\wp¬authconfig) \\
-    \se(\var{\wpX_\wp¬metadata}, \wpX_\wp¬authcode) &\equiv \Lambda(\delta[\wpX_\wp¬authcodehost], (\wpX_\wp¬context)_t, \wpX_\wp¬authcodehash) \\
-    (\wpX_\wp¬metadata, \wpX_\wp¬authcode) &\in (\Y, \Y)
+    \wpX_\wp¬authorizer &\equiv \blake(\wpX_\wp¬authcodehash \concat \wpX_\wp¬authconfig) \\
+    \se(\var{\wpX_\wp¬metadata}, \wpX_\wp¬authcode) &\equiv \histlookup(\accounts[\wpX_\wp¬authcodehost], (\wpX_\wp¬context)_t, \wpX_\wp¬authcodehash) \\
+    (\wpX_\wp¬metadata, \wpX_\wp¬authcode) &\in (\blob, \blob)
   \end{aligned}\right.
 \end{equation}
 
-(The historical lookup function, $\Lambda$, is defined in equation \ref{eq:historicallookup}.)
+(The historical lookup function, $\histlookup$, is defined in equation \ref{eq:historicallookup}.)
 
 \subsubsection{Exporting}
 Any of a work-package's work-items may \emph{export} segments and a \emph{segments-root} is placed in the work-report committing to these, ordered according to the work-item which is exporting. It is formed as the root of a constant-depth binary Merkle tree as defined in equation \ref{eq:constantdepthmerkleroot}.
@@ -184,7 +184,7 @@ We now come to the work-report computation function $\Xi$. This forms the basis 
   \Xi \colon \left\{\begin{aligned}
     (\workpackage, \N_\mathsf{C}) &\to \workreport \\
     (\wpX, \¬core) &\mapsto \begin{cases}
-        \error &\when \wr¬authtrace \not\in \Y_{:\mathsf{W}_R} \\
+        \error &\when \wr¬authtrace \not\in \blob_{:\mathsf{W}_R} \\
         \tup{\wr¬avspec, \is{\wr¬context}{\wpX_\wp¬context}, \¬core, \is{\wr¬authorizer}{\wpX_\wp¬authorizer}, \wr¬authtrace, \wr¬srlookup, \wr¬digests, \wr¬authgasused} &\otherwise
     \end{cases}
   \end{aligned}\right.
@@ -204,13 +204,13 @@ Where:
   \countupexports(\wpX, j) \equiv \,&\begin{cases}
     (\oversize, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\when |r| + z > \mathsf{W}_R\\
     (\badexports, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen |\mathbf{e}| \ne w_e \\
-    (r, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen r \not\in \mathbb{Y} \\
+    (r, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen r \not\in \blob \\
     (r, u, \mathbf{e}) &\otherwise \\
     \multicolumn{2}{l}{\where (r, \mathbf{e}, u) = \Psi_R(
       j, \wpX, \mathbf{o}, [\importsegmentdata(w) \mid w \orderedin \wpX_\wp¬workitems], \ell
     )}\\
-    \multicolumn{2}{l}{\also h = \hash(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportcount}\\
-    \multicolumn{2}{l}{\also z = |\mathbf{o}| + \sum_{k < j, (r \in \Y, \dots) = I(p, k)} |r|}
+    \multicolumn{2}{l}{\also h = \blake(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportcount}\\
+    \multicolumn{2}{l}{\also z = |\mathbf{o}| + \sum_{k < j, (r \in \blob, \dots) = I(p, k)} |r|}
   \end{cases}
 \end{align*}
 
@@ -230,7 +230,7 @@ We immediately define the segment-root lookup function $\segrootlookup$, depende
 
 In order to expect to be compensated for a work-report they are building, guarantors must compose a value for $\wr¬srlookup$ to ensure not only the above but also a further constraint that all pairs of work-package hashes and segment-roots do properly correspond:
 \begin{equation}
-  \forall (h \mapsto e) \in \wr¬srlookup : \exists \wpX, \¬core \in \workpackage, \N_\mathsf{C} : \hash(\wpX) = h \wedge (\Xi(\wpX, \¬core)_s)_e = e\!\!\!\!
+  \forall (h \mapsto e) \in \wr¬srlookup : \exists \wpX, \¬core \in \workpackage, \N_\mathsf{C} : \blake(\wpX) = h \wedge (\Xi(\wpX, \¬core)_s)_e = e\!\!\!\!
 \end{equation}
 
 As long as the guarantor is unable to satisfy the above constraints, then it should consider the work-package unable to be guaranteed. Auditors are not expected to populate this but rather to reuse the value in the work-report they are auditing.
@@ -240,7 +240,7 @@ The next term to be introduced, $\tup{\wr¬authtrace, \wr¬authgasused}$, is the
 The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $\wiX$. We also define $\justifysegmentdata$, which compiles justifications of segment data:
 \begin{equation}
   \begin{aligned}
-    \extrinsicdata(\wiX \in \workitem) &\equiv [\mathbf{d} \mid (\hash(\mathbf{d}), |\mathbf{d}|) \orderedin \wiX_\wi¬extrinsics] \\
+    \extrinsicdata(\wiX \in \workitem) &\equiv [\mathbf{d} \mid (\blake(\mathbf{d}), |\mathbf{d}|) \orderedin \wiX_\wi¬extrinsics] \\
     \importsegmentdata(\wiX \in \workitem) &\equiv [\segsX[n] \mid \mathcal{M}(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments] \\
     \justifysegmentdata(\wiX \in \workitem) &\equiv [\var{\mathcal{J}_0(\segsX, n)} \mid \mathcal{M}(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments]
   \end{aligned}
@@ -249,7 +249,7 @@ The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ whi
 We may then define $\wr¬avspec$ as the data availability specification of the package using these two functions together with the yet to be defined \emph{Availability Specifier} function $\newavailabilityspecifier$ (see section \ref{sec:availabiltyspecifier}):
 \begin{equation}
   \wr¬avspec = \newavailabilityspecifier(
-    \hash(\wpX),
+    \blake(\wpX),
     \se(
       \wpX,
       \extrinsicdata^\#(\wpX_\wp¬workitems),
@@ -276,7 +276,7 @@ Validators, in their role as availability assurers, should index such chunks acc
 We define the availability specifier function $\newavailabilityspecifier$, which creates an availability specifier from the package hash, an octet sequence of the audit-friendly work-package bundle (comprising the work-package itself, the extrinsic data and the concatenated import segments along with their proofs of correctness), and the sequence of exported segments:
 \begin{equation}
   \!\!\!\newavailabilityspecifier\colon\left\{\,\begin{aligned}
-    \tuple{\H, \Y, \seq{\G}} &\to \avspec\\
+    \tuple{\H, \blob, \seq{\G}} &\to \avspec\\
     \tup{h, \mathbf{b},\,\mathbf{s}} &\mapsto \tup{
       h,\,
       \is{l}{|\mathbf{b}|},\,
@@ -290,7 +290,7 @@ We define the availability specifier function $\newavailabilityspecifier$, which
   \where u &= \mathcal{M}_B(
     [\wideparen{\mathbf{x}} \mid \mathbf{x} \orderedin \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
   )\\
-  \also \mathbf{b}^\clubsuit &= \hash^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_E}}}(\mathcal{P}_{\mathsf{W}_E}(\mathbf{b})))\\
+  \also \mathbf{b}^\clubsuit &= \blake^\#(\mathcal{C}_{\ceil{\nicefrac{|\mathbf{b}|}{\mathsf{W}_E}}}(\mathcal{P}_{\mathsf{W}_E}(\mathbf{b})))\\
   \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat \pagedproofs(\mathbf{s})))
 \end{align*}
 
@@ -303,7 +303,7 @@ The functions $\mathcal{M}$ and $\mathcal{M}_B$ are the fixed-depth and simple b
 And $\mathcal{P}$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
 \begin{equation}\label{eq:zeropadding}
   \mathcal{P}_{n \in \N_{1\dots}}\colon\left\{\begin{aligned}
-    \Y &\to \Y_{k\cdot n}\\
+    \blob &\to \blob_{k\cdot n}\\
     \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((|x|+n - 1) \bmod n) + 1 \dots n}
   \end{aligned}\right.
 \end{equation}
